# vs-logger

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  main.cpp
include/vs/: logger.hpp
src/: CMakeLists.txt  logger.cpp
tests/: CMakeLists.txt  main_test.cpp
